# py-rcsb_apps_sfconvert

./: .gitignore  README.md  cif2cif_sf.py  delete.txt  delete2.txt  logfile.txt  pylintrc  pyproject.toml  resolution.py  resolutioncalculator.py  sf_file.py  sffile.py  test.py  test.txt  tox.ini  util.py
sf_convert_project/: .gitignore  MANIFEST.in  README.md  pylintrc  pyproject.toml  tox.ini
sf_convert_project/output/: log.txt
sf_convert_project/src/sf_convert/: CheckSfFile.py
sf_convert_project/src/sf_convert/command_line/: main.py
sf_convert_project/src/sf_convert/export/: cif2cns.py  cif2mtz.py  cns2cif.py  cns_export.py  cns_file.txt  mtz2cif.py  mtztommcif.py  output.cif  output2.cif
sf_convert_project/src/sf_convert/export_dir/: cif2cif.py  cif2cns.py  cif2cns_doc.py  cif2mtz.py  cns2cif.py  export_cif.py  export_cns.py  export_mtz.py
sf_convert_project/src/sf_convert/import_dir/: cns2cif.py  import_cif.py  import_mtz.py  mtz2cif.py  mtz2cif_doc.py
sf_convert_project/src/sf_convert/sffile/: 1o08.cif  4ar3-sf.cif.mtz  cns-sf6.cv  cns_export.py  get_items_pdb.py  get_items_pdb_doc.py  guess_sf_format.py  guess_sf_format_doc.py  main.py  main2.py  main_2.py  main_3.py  main_4_works.py  main_5_works.py  main_6_works.py  main_7_class.py  main_8_class.py  main_9.py  reformat_sfhead.py  reformat_sfhead2.py  sf_convert.py  sf_file.py  sf_file_doc.py  sf_format_guess.text  test.py  test_1_cif.py  test_2_cif.py  your_output_file.txt
sf_convert_project/src/sf_convert/tests/: cns_export.py  cns_export2.py  cns_export_2.py  cns_export_3.py  cns_export_4.py  cns_test.py  label.txt  label_2.txt  labels.py  mtz_export.py  output.mtz
sf_convert_project/src/sf_convert/utils/: CheckSfFile.py  CheckSfFile_doc.py  CifUtils.py  TextUtils.py  get_sf_info_file.py  pinfo_file.py  reformat_sfhead.py  sf_correct.py  version.py
sf_convert_project/src/tests/: 1N9F.mtz  1N9F.mtz.mmcif  cli_testing.py  cns_test.py  cns_test_doc.py  conftest.py  conftest_doc.py  help_output.txt  just_test.py  labels_testing.py  labels_testing2.py  mtztommcif.py  output.txt  output2.cif  output_cif_file.cif  pdb_file_test.py  profile_output.pstats  spec_file_content.txt  test1.py  test2.py  test_cif2cif.py  test_cif2cif_doc.py  test_cif2cns.py  test_cif2cns_doc.py  test_cif2mtz.py  test_cns2cif.py  test_detail.py  test_detail_doc.py  test_extract_pdb.py  test_mtz2cif.py  test_mtz2cif_doc.py  test_utils.py  test_valid.py  test_version.py
sf_convert_project/src/tests/data/cif_files/: 100d.cif  5pny-sf-CNS.mmcif  5pny.cif  cns-sf6.cv.mmcif  sf_4_validate.cif
sf_convert_project/src/tests/helpers/: TestHelper.py
sf_convert_project/tests/: delete2.cif  test_cif2cif.py  test_cif2mtz.py  test_cns2cif.py  test_valid.py
sf_convert_project/tests/data/cif_files/: cfile
tests/: conftest.py  test_blockname.py  test_cif2cif.py  (+13 more)
(+33 files in other folders)
