[build-system]
requires = ["setuptools >= 69"]
build-backend = "setuptools.build_meta"

[project]
name = "sf_convert"
authors = [
    {name = "Vivek Reddy Chithari", email="vivek.chithari@rcsb.org"}
]
description = "Package for sf_convert"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "mmcif",
    "gemmi"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "sf_convert.__version__"}

[project.scripts]
sf_convert = "sf_convert.command_line.main:main"

[tool.pytest.ini_options]
pythonpath = ["src", "tests/helpers"]
#pythonpath = ["src"]


